booking server start
