# cinema_server/app/demo/v1/schemas.py
@@ -67,7 +67,7 @@ filters = {
     ('cinema_search', 'GET'): {200: {'headers': None, 'schema': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'integer'}, 'name': {'type': 'string'}, 'address': {'type': 'string'}, 'phone': {'type': 'string'}}}}}, 403: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
     ('movie', 'GET'): {200: {'headers': None, 'schema': {'type': 'array', 'items': {'type': 'object', 'properties': {'id': {'type': 'integer'}, 'title': {'type': 'string'}, 'description': {'type': 'string'}, 'cast': {'type': 'string'}}}}}},
     ('movie_id', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'id': {'type': 'integer'}, 'title': {'type': 'string'}, 'description': {'type': 'string'}, 'cast': {'type': 'string'}}}}, 404: {'headers': None, 'schema': None}},
-    ('movie_search', 'GET'): {200: {'headers': None, 'schema': {'type': 'object', 'properties': {'id': {'type': 'integer'}, 'title': {'type': 'string'}, 'description': {'type': 'string'}, 'cast': {'type': 'string'}, 'cinema': {'type': 'array', 'items': {'type': 'object', 'properties': {'cinema_id': {'type': 'integer'}, 'cinema_name': {'type': 'string'}}}}}}}, 403: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
+    ('movie_search', 'GET'): {200: {'headers': None, 'schema': {'type': 'array', 'items': {'type': 'object', 'properties': {'cinema_id': {'type': 'integer'}, 'cinema_name': {'type': 'string'}, 'movie_id': {'type': 'integer'}, 'movie_title': {'type': 'string'}}}}}, 403: {'headers': None, 'schema': None}, 404: {'headers': None, 'schema': None}},
 }
 
 scopes = {
